--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.9 # help us to use SVG in our app
   provider: ^6.1.1 # for State management
   http: ^0.13.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
