--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.1 # for State management
   http: ^0.13.3
   get: ^4.6.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
